Checking of 3.1 beta code with DARPA (merging frame store) changes

--- a/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -1,9 +1,9 @@
-#Mon Feb 28 11:18:42 GMT-08:00 2005
-build.number=145
-build.number.previous=144
-build.version.previous=3.0
+#Fri Feb 04 11:29:54 GMT-08:00 2005
+build.number=-1
+build.number.previous=140
+build.version.previous=2.1.2
 name=Protege
 copyright=Copyright (c) 1998-2005 Stanford University
-build.status=beta
+build.status=alpha
 build.version=3.1
 trademark=Prot&eacute;g&eacute; is a trademark of Stanford University
