Undoing change committed in r234.

--- a/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -1,9 +1,9 @@
-#Tue Mar 01 15:38:58 GMT-08:00 2005
-build.version.previous=2.1.2
-build.number.previous=141
-build.number=000
+#Mon Feb 28 11:18:42 GMT-08:00 2005
+build.number=145
+build.number.previous=144
+build.version.previous=3.0
 name=Protege
 copyright=Copyright (c) 1998-2005 Stanford University
-build.status=alpha
+build.status=beta
 build.version=3.1
 trademark=Prot&eacute;g&eacute; is a trademark of Stanford University
