--- a/src/edu/stanford/smi/protege/resource/files/protege_text.properties
+++ b/src/edu/stanford/smi/protege/resource/files/protege_text.properties
@@ -300,14 +300,14 @@ open_project_dialog.title=Open Project
 
 welcome_dialog.getting_started=Getting Started
 welcome_dialog.build=Build
-welcome_dialog.open_other=Open Other
-welcome_dialog.open=Open
+welcome_dialog.open_other=Open Other Project
+welcome_dialog.open=Open Selected Project
 welcome_dialog.all_topics=All Topics
 welcome_dialog.users_guide=User's Guide
 welcome_dialog.faq=FAQ
 welcome_dialog.project_format_title=Project Format
-welcome_dialog.open_recent_project_title=Open Recent
-welcome_dialog.new=New
+welcome_dialog.open_recent_project_title=Recent Projects
+welcome_dialog.new=Create New Project
 welcome_dialog.help_title=Help
 welcome_dialog.new_tooltip=Create a New Empty Project in the Selected Format
 welcome_dialog.build_tooltip=Build a New Project from Sources in the Selected Format
