--- a/src/edu/stanford/smi/protege/resource/files/protege_text.properties
+++ b/src/edu/stanford/smi/protege/resource/files/protege_text.properties
@@ -35,15 +35,15 @@ project.import_to_standard=Import to Standard Interface
 project.export_to_format=Export to Format
 project.build=Build New Project...
 project.build.mnemonic=B
-project.convert=Convert Project to Format
-project.generate_html=Generate HTML
+project.convert=Convert Project to Format...
+project.generate_html=Generate HTML...
 project.generate_html.mnemonic=H
 project.archive=Archive Current Version
 project.archive.mnemonic=A
 project.revert=Revert to a Previous Version
 project.revert.mnemonic=R
 project.configure_archive=Configure Archive
-project.manage_included=Manage Included Projects
+project.manage_included=Manage Included Projects...
 project.change_included=Change Directly Included Projects...
 project.change_included.mnemonic=C
 project.include=Include Project
@@ -57,7 +57,7 @@ project.metrics.mnemonic=T
 project.file_encodings=Encodings...
 project.file_encodings.mnemonic=E
 
-application.preferences=Preferences
+application.preferences=Preferences...
 application.exit=Exit {0}
 application.exit.mnemonic=X
 
@@ -67,7 +67,7 @@ undo.mnemonic=U
 redo=Redo
 redo.mnemonic=R
 redo.shortcut=Y
-command_history=Command History
+command_history=Command History...
 command_history.mnemonic=H
 cut=Cut
 cut.shortcut=X
@@ -81,7 +81,7 @@ paste.mnemonic=P
 clear=Clear
 clear.mnemonic=R
 clear.shortcut=\u007f
-insert_unicode=Insert Unicode Characters
+insert_unicode=Insert Unicode Characters...
 convert_unicode_sequence=Convert Unicode Sequence
 
 increase_font_size=Increase Font Size
