updated status property for 3.1 release

--- a/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -4,6 +4,6 @@ build.number.previous=206
 build.version.previous=3.0
 name=Protege
 copyright=Copyright (c) 1998-2005 Stanford University
-build.status=beta
+build.status=
 build.version=3.1
 trademark=Prot&eacute;g&eacute; is a trademark of Stanford University
