--- a/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -1,9 +1,9 @@
 #Wed Aug 10 14:17:06 GMT-08:00 2005
-build.version.previous=3.1
+build.version.previous=3.1.1
 build.number.previous=215
 build.number=216
 name=Protege
 copyright=Copyright (c) 1998-2005 Stanford University
-build.status=
-build.version=3.1.1
+build.status=beta
+build.version=3.2
 trademark=Prot&eacute;g&eacute; is a trademark of Stanford University
