--- a/logging.properties
+++ b/logging.properties
@@ -7,5 +7,31 @@
 # will turn on all logging above the level FINEST for the framestore classes.
 #
 
+handlers=java.util.logging.ConsoleHandler edu.stanford.smi.protege.util.FileHandler
+#handlers=java.util.logging.ConsoleHandler java.util.logging.FileHandler
+java.util.logging.FileHandler.level=ALL
+#
+# This line is deliberately ignored by the 
+#   edu.stanford.smi.protege.util.FileHandler
+# The path is set to ${protege.dir}/logs/protege_%u.log
+# log4j allows one to do this in the configuration file.
+#
+java.util.logging.FileHandler.pattern=%t/protege_%u.log
+#
+# formatter line is ignored for the 
+#   edu.stanford.smi.protege.util.FileHandler
+# This needs investigation
+#
+java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
+
+java.util.logging.ConsoleHandler.level=CONFIG
+java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.ConsoleFormatter
+
+protege.system.level=ALL
+
 #edu.stanford.smi.protege.model.Project.level = FINEST
-#edu.stanford.smi.protege.model.framestores.level=FINEST
+#edu.stanford.smi.protege.model.framestore.level=FINEST
+#edu.stanford.smi.protege.storage.database.level=FINEST
+#edu.stanford.smi.protege.storage.database.DatabaseFrameDb.level=FINE
+#edu.stanford.smi.protege.storage.database.IncludingDatabaseAdapter.level=FINE
+#edu.stanford.smi.protege.util.Log.level=FINEST
