checking in nick's code and also modified some menu text in protege_text.properties from "open project" to just "open", etc.

--- a/src/edu/stanford/smi/protege/resource/files/protege_text.properties
+++ b/src/edu/stanford/smi/protege/resource/files/protege_text.properties
@@ -12,10 +12,10 @@ menubar.help.mnemonic=H
 project.new=New Project...
 project.new.mnemonic=N
 project.new.shortcut=N
-project.open=Open Project...
+project.open=Open...
 project.open.mnemonic=O
 project.open.shortcut=O
-project.open_recent=Open Recent Project
+project.open_recent=Open Recent
 project.open_remote=Open Remote Project...
 project.open_remote.mnemonic=R
 project.close=Close Project
@@ -300,18 +300,18 @@ open_project_dialog.title=Open Project
 
 welcome_dialog.getting_started=Getting Started
 welcome_dialog.build=Build
-welcome_dialog.open_other=Open Existing Project...
-welcome_dialog.open=Open Selected Project
+welcome_dialog.open_other=Open Existing File...
+welcome_dialog.open=Open Selected File
 welcome_dialog.all_topics=All Topics
 welcome_dialog.users_guide=User's Guide
 welcome_dialog.faq=FAQ
-welcome_dialog.open_recent_project_title=Recently Accessed Projects
+welcome_dialog.open_recent_project_title=Recently Accessed
 welcome_dialog.new=Create New Project...
 welcome_dialog.help_title=Help
 welcome_dialog.new_tooltip=
 welcome_dialog.build_tooltip=
-welcome_dialog.open_tooltip=Open the Project Selected Above
-welcome_dialog.open_existing_tooltip=Open an Existing Project
+welcome_dialog.open_tooltip=Open the File Selected Above
+welcome_dialog.open_existing_tooltip=Open an Existing File
 
 title.project=Project
 
