--- a/junit.properties
+++ b/junit.properties
@@ -22,7 +22,7 @@ junit.db.Oracle.configured=false
 junit.db.Oracle.driver=oracle.jdbc.driver.OracleDriver
 junit.db.Oracle.table=scratch
 junit.db.Oracle.user=protege
-junit.db.Oracle.password=sm1prot3ge
+junit.db.Oracle.password=foo
 junit.db.Oracle.url=jdbc:oracle:thin:@irt-dev-db.stanford.edu:1521:dev
 
 
@@ -30,7 +30,7 @@ junit.db.MySQL.configured=false
 junit.db.MySQL.driver=com.mysql.jdbc.Driver
 junit.db.MySQL.table=scratch
 junit.db.MySQL.user=protege
-junit.db.MySQL.password=troglodyte
+junit.db.MySQL.password=foo
 junit.db.MySQL.url=jdbc:mysql://localhost/protege
 
 
@@ -38,21 +38,21 @@ junit.db.MsAccess.configured=false
 junit.db.MsAccess.driver=sun.jdbc.odbc.JdbcOdbcDriver
 junit.db.MsAccess.table=scratch
 junit.db.MsAccess.user=protege
-junit.db.MsAccess.password=sm1prot3ge
+junit.db.MsAccess.password=foo
 junit.db.MsAccess.url=jdbc:odbc:protege
 
 
 junit.db.PostGres.configured=false
-junit.db.Postgres.driver=org.postgresql.Driver
-junit.db.Postgres.table=scratch
-junit.db.Postgres.user=protege
-junit.db.Postgres.password=troglodyte
-junit.db.Postgres.url=jdbc:postgresql://localhost/protege
+junit.db.PostGres.driver=org.postgresql.Driver
+junit.db.PostGres.table=scratch
+junit.db.PostGres.user=protege
+junit.db.PostGres.password=foo
+junit.db.PostGres.url=jdbc:postgresql://localhost/protege
 
 
 junit.db.SQLServer.configured=false
-junit.db.SQLServer.driver=unknown
-junit.db.SQLServer.table=unknown
-junit.db.SQLServer.user=unknown
-junit.db.SQLServer.password=unknown
-junit.db.SQLServer.url=unknown
+junit.db.SQLServer.driver=com.microsoft.jdbc.sqlserver.SQLServerDriver
+junit.db.SQLServer.table=scratch
+junit.db.SQLServer.user=sa
+junit.db.SQLServer.password=foo
+junit.db.SQLServer.url=jdbc:microsoft:sqlserver://oconnor-smi:1433;DatabaseName=protege;SelectMethod=cursor
