Just some additional things that people might want to log.

--- a/logging.properties
+++ b/logging.properties
@@ -31,7 +31,17 @@ protege.system.level=ALL
 
 #edu.stanford.smi.protege.model.Project.level = FINEST
 #edu.stanford.smi.protege.model.framestore.level=FINEST
+#edu.stanford.smi.protege.server.framestore.LocalizeFrameStore.level=FINEST
 #edu.stanford.smi.protege.storage.database.level=FINEST
-#edu.stanford.smi.protege.storage.database.DatabaseFrameDb.level=FINE
-#edu.stanford.smi.protege.storage.database.IncludingDatabaseAdapter.level=FINE
+#edu.stanford.smi.protege.storage.database.DatabaseFrameDb.level=FINEST
+#edu.stanford.smi.protege.storage.database.IncludingDatabaseAdapter.level=FINEST
 #edu.stanford.smi.protege.util.Log.level=FINEST
+
+
+#
+# RMI logging
+#
+#sun.rmi.client.call.level=FINEST
+#sun.rmi.server.call.level=FINEST
+#sun.rmi.transport.misc.level=FINEST
+#sun.rmi.transport.tcp.level=FINEST
