--- a/junit-logging.properties
+++ b/junit-logging.properties
@@ -11,6 +11,7 @@
 #
 
 
+
 handlers=java.util.logging.FileHandler
 java.util.logging.FileHandler.level=ALL
 java.util.logging.FileHandler.pattern=%t/protege_%g.log
@@ -21,6 +22,7 @@ protege.system.level=ALL
 
 #edu.stanford.smi.protege.model.Project.level = FINEST
 #edu.stanford.smi.protege.model.framestore.level=FINEST
+#edu.stanford.smi.protege.model.framestore.MergingNarrowFrameStore.level=FINEST
 #edu.stanford.smi.protege.storage.database.level=FINEST
 #edu.stanford.smi.protege.storage.database.DatabaseFrameDb.level=FINE
 #edu.stanford.smi.protege.storage.database.IncludingDatabaseAdapter.level=FINE
