--- a/junit.properties
+++ b/junit.properties
@@ -9,14 +9,17 @@
 # random user can run tests.
 #
 
-#
-# The server test depends on the rmi_registry to be running.  The server tests are disabled if there is no pointer to the location
-# of the jar file.
+#--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==
+# The server test depends on the rmi_registry to be running.  The
+# server tests are disabled if there is no pointer to the location of
+# the jar file. 
 #
 
 #junit.server.protege.jar=file:///Users/tredmond/dev/workspace/protege-head/dist/protege.jar
 
-#
+
+
+#--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==
 #  Configuration of file locations.  Should eventually include web locations for ontologies.
 #
 
@@ -25,7 +28,8 @@
 #junit.project.file.including=something
 #junit.project.file.including=something
 
-#
+
+#--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==
 # Configuration file for database.  Makes it easier to run the junit tests 
 # automatically.  The defaults in the svn tree should be nothing configured 
 # so that we can run the junit tests automatically. Developers can set this to 
