Fixing empty catch blocks

--- a/logging.properties
+++ b/logging.properties
@@ -7,6 +7,13 @@
 # will turn on all logging above the level FINEST for the framestore classes.
 #
 
+#
+# Use protege.system.level=FINE to see empty catch block exceptions or other 
+# errors that somebody thought could be ignored.
+#
+protege.system.level=CONFIG
+
+
 handlers=java.util.logging.ConsoleHandler edu.stanford.smi.protege.util.FileHandler
 #handlers=java.util.logging.ConsoleHandler java.util.logging.FileHandler
 java.util.logging.FileHandler.level=ALL
@@ -27,7 +34,7 @@ java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.ConsoleHandler.level=CONFIG
 java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.ConsoleFormatter
 
-protege.system.level=ALL
+
 
 #edu.stanford.smi.protege.model.Project.level = FINEST
 #edu.stanford.smi.protege.model.framestore.level=FINEST
