--- a/junit.properties.template
+++ b/junit.properties.template
@@ -9,7 +9,28 @@
 # random user can run tests.
 #
 
+#--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==
+# The server test depends on the rmi_registry to be running.  The
+# server tests are disabled if there is no pointer to the location of
+# the jar file. 
 #
+
+#junit.server.protege.jar=file:///Users/tredmond/dev/workspace/protege-head/dist/protege.jar
+
+
+
+#--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==
+#  Configuration of file locations.  Should eventually include web locations 
+#  for ontologies.
+#
+
+#junit.project.file.newspaper=file://Users/tredmond/dev/workspace/protege-head/examples/newspaper/newspaper.pprj
+#junit.project.file.jar.newspaper=jar:file://Users/tredmond/dev/workspace/protege-head/examples/newspaper/newspaper.jar!/newspaper.pprj
+#junit.project.file.including=something
+#junit.project.file.including=something
+
+
+#--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==--==
 # Configuration file for database.  Makes it easier to run the junit tests 
 # automatically.  The defaults in the svn tree should be nothing configured 
 # so that we can run the junit tests automatically. Developers can set this to 
@@ -30,7 +51,7 @@ junit.db.MySQL.configured=false
 junit.db.MySQL.driver=com.mysql.jdbc.Driver
 junit.db.MySQL.table=scratch
 junit.db.MySQL.user=protege
-junit.db.MySQL.password=foo
+junit.db.MySQL.password=xks
 junit.db.MySQL.url=jdbc:mysql://localhost/protege
 
 
