A copy of the protege-core tree for the nci work.  This tree will have the changes that are due on june 15, 2006

--- a/junit-logging.properties
+++ b/junit-logging.properties
@@ -18,6 +18,7 @@ java.util.logging.FileHandler.pattern=%t/protege_%g.log
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.append="true"
 
+level=ALL
 protege.system.level=ALL
 
 #edu.stanford.smi.protege.model.Project.level = FINEST
