--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
         <property name = "plugins" value = "./plugins"/>
 	<!-- Compiler options. -->
 	<property name = "deprecation" value = "on"/>    
-	<property name = "debug" value = "off"/>  
+	<property name = "debug" value = "on"/>  
 	<property name = "optimize" value = "on"/>  
 	<property name = "packages" value = "edu.*"/>  
 	<property name = "includeAntRuntime" value = "no"/>
