--- a/logging.properties
+++ b/logging.properties
@@ -15,8 +15,8 @@ protege.system.level=CONFIG
 
 
 handlers=java.util.logging.ConsoleHandler edu.stanford.smi.protege.util.FileHandler
-#handlers=java.util.logging.ConsoleHandler java.util.logging.FileHandler
 java.util.logging.FileHandler.level=ALL
+
 #
 # This line is deliberately ignored by the 
 #   edu.stanford.smi.protege.util.FileHandler
@@ -31,13 +31,18 @@ java.util.logging.FileHandler.pattern=%t/protege_%u.log
 #
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 
-java.util.logging.ConsoleHandler.level=CONFIG
+java.util.logging.ConsoleHandler.level=INFO
 java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.ConsoleFormatter
 
 
 
 #edu.stanford.smi.protege.model.Project.level = FINEST
 #edu.stanford.smi.protege.model.framestore.level=FINEST
+#edu.stanford.smi.protege.model.framestore.MergingNarrowFrameStore.level=FINEST
+#edu.stanford.smi.protege.server.level=FINEST
+#edu.stanford.smi.protege.server.ServerFrameStore.level=FINEST
+#edu.stanford.smi.protege.server.Server_Test.level=FINEST
+#edu.stanford.smi.protege.model.framestore.FrameStore_Test.level=FINEST
 #edu.stanford.smi.protege.server.framestore.LocalizeFrameStore.level=FINEST
 #edu.stanford.smi.protege.storage.database.level=FINEST
 #edu.stanford.smi.protege.storage.database.DatabaseFrameDb.level=FINEST
