--- a/logging.properties
+++ b/logging.properties
@@ -31,19 +31,21 @@ java.util.logging.FileHandler.pattern=%t/protege_%u.log
 #
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 
-java.util.logging.ConsoleHandler.level=INFO
+java.util.logging.ConsoleHandler.level=CONFIG
 java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.ConsoleFormatter
 
 
 
-#edu.stanford.smi.protege.model.Project.level = FINEST
 #edu.stanford.smi.protege.model.framestore.level=FINEST
-#edu.stanford.smi.protege.model.framestore.MergingNarrowFrameStore.level=FINEST
-#edu.stanford.smi.protege.server.level=FINEST
-#edu.stanford.smi.protege.server.ServerFrameStore.level=FINEST
-#edu.stanford.smi.protege.server.Server_Test.level=FINEST
 #edu.stanford.smi.protege.model.framestore.FrameStore_Test.level=FINEST
+#edu.stanford.smi.protege.model.framestore.MergingNarrowFrameStore.level=FINEST
+#edu.stanford.smi.protege.model.Project.level = FINEST
+#edu.stanford.smi.protege.server.level=FINEST
+#edu.stanford.smi.protege.server.framestore.FrameCalculator.level=FINEST
 #edu.stanford.smi.protege.server.framestore.LocalizeFrameStore.level=FINEST
+#edu.stanford.smi.protege.server.framestore.RemoteClientFrameStore.level=FINEST
+#edu.stanford.smi.protege.server.framestore.ServerFrameStore.level=FINEST
+#edu.stanford.smi.protege.server.Server_Test.level=FINEST
 #edu.stanford.smi.protege.storage.database.level=FINEST
 #edu.stanford.smi.protege.storage.database.DatabaseFrameDb.level=FINEST
 #edu.stanford.smi.protege.storage.database.IncludingDatabaseAdapter.level=FINEST
@@ -57,3 +59,11 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 #sun.rmi.server.call.level=FINEST
 #sun.rmi.transport.misc.level=FINEST
 #sun.rmi.transport.tcp.level=FINEST
+
+
+#
+# Debugging server-client performance
+#
+#sun.rmi.client.call.level=FINEST
+#edu.stanford.smi.protege.server.framestore.FrameCalculator.level=FINEST
+#edu.stanford.smi.protege.server.framestore.RemoteClientFrameStore.level=FINEST
