Minor - FINEST is too much for RemoteClientFrameStore...

--- a/logging.properties
+++ b/logging.properties
@@ -66,4 +66,4 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 #
 #sun.rmi.client.call.level=FINEST
 #edu.stanford.smi.protege.server.framestore.FrameCalculator.level=FINEST
-#edu.stanford.smi.protege.server.framestore.RemoteClientFrameStore.level=FINEST
+#edu.stanford.smi.protege.server.framestore.RemoteClientFrameStore.level=FINE
