Modified so that the user will see System.out messages from the junit tests. This allows the junit tests to tell the user what is configured and what is not.

--- a/build.xml
+++ b/build.xml
@@ -212,7 +212,8 @@
         <target name = "junit" 
                 description = "test the system"
                 depends="compile-junit, jar">
-          <junit  printsummary="withOutAndErr" haltonerror="on" fork="yes">
+          <junit  printsummary="withOutAndErr" haltonerror="on" fork="yes"
+                  showoutput="yes">
             <classpath refid="project.classpath"/>
             <classpath refid="database.drivers"/>
             <classpath>
