Modified the junit tests.

--- a/build.xml
+++ b/build.xml
@@ -222,11 +222,13 @@
             <jvmarg value="-Djava.util.logging.config.file=junit-logging.properties"/>
             <batchtest>
               <fileset dir="${junit}">
+                <!--
                 <include name="**/*Test.java"/>
+                -->
+                <include name="**/DBServer_Test.java"/>
                 <!-- Exclude the graphics tests -->
-                <exclude name="**/Application_Test.java"/>
-                <exclude name="**/action/*.java"/>
-                <exclude name="**/widget/**.java"/>
+                <exclude name="**/*Package_Test.java"/>
+                <!-- what's the story with this one? -->
                 <exclude name="**/framestore/FrameStore_Test.java"/>
               </fileset>
             </batchtest>
