--- a/junit.properties.template
+++ b/junit.properties.template
@@ -23,7 +23,8 @@ junit.server.protege.jar=file:///Users/tredmond/dev/workspace/protege-head/dist/
 # the database project and the meta-project that uses the database.  A useful technique 
 # for creating the database project is to configure the settings below and then run 
 # DBServer_Test as a java application (not a junit test).  The metaproject is preconfigured
-# to look for the database project in junit/pprj/scratch.pprj.
+# to look for the database project in junit/pprj/scratch.pprj.  This project can be automatically
+# created from the settings below by calling the main method of DBServer_Test.
 
 # These tests also depend on the server jar file property and the rmiregistry.
 # 
@@ -31,10 +32,12 @@ junit.server.protege.jar=file:///Users/tredmond/dev/workspace/protege-head/dist/
 # the database configuration section.  Currently valid options are
 # Oracle, MySQL, MsAccess, PostGres and SQLServer.  If this setting is
 # set then we will assume that the database server-client test is configured.
-#
+# MySQL, at least for mysql 5, is not recommended here as it does not seem to
+# set the transaction isolation level reliably.  This leads to intermittant 
+# failures of the DBServer_Test.
 #
 
-#junit.server.db.dbtype=MySQL
+#junit.server.db.dbtype=PostGres
 #junit.server.db.file.dbproject=junit/pprj/scratch.pprj
 #junit.server.db.file.metaproject=junit/pprj/metaproject.pprj
 #junit.server.db.client_project=scratch
