--- a/build.xml
+++ b/build.xml
@@ -86,9 +86,8 @@
 	<!-- =================================================================== -->
 	
 	<!-- JAVACC -->
-	
-	<!-- =================================================================== -->
-	<target name = "javacc" depends = "prepare">
+
+        <target name = "clean-clips">
 		<!-- Delete these files because Ant's javacc task won't regenerate files when the date on the files is the same as the date on the grammer file (Parser.jj) -->
 		<delete file = "${src}/edu/stanford/smi/protege/storage/clips/ParseException.java"/>
 		<delete file = "${src}/edu/stanford/smi/protege/storage/clips/Parser.java"/>
@@ -97,6 +96,9 @@
 		<delete file = "${src}/edu/stanford/smi/protege/storage/clips/SimpleCharStream.java"/>
 		<delete file = "${src}/edu/stanford/smi/protege/storage/clips/Token.java"/>
 		<delete file = "${src}/edu/stanford/smi/protege/storage/clips/TokenMgrError.java"/>
+	</target>
+	<!-- =================================================================== -->
+	<target name = "javacc" depends = "prepare, clean-clips">
 		<!-- Run JavaCC on Parser.jj to regenerate files that were deleted in above step. -->
 		<javacc javacchome = "${javacc.home}/bin/lib" target = "${scripts}/Parser.jj" outputdirectory = "${src}/edu/stanford/smi/protege/storage/clips"/>  
 	</target>  
@@ -200,7 +202,7 @@
 	<!-- CLEAN -->
 	
 	<!-- =================================================================== -->
-	<target name = "clean" description = "clean up">    
+	<target name = "clean" description = "clean up" depends="clean-clips">    
 		<delete dir = "${classes}"/>  
 		<delete dir = "${dist}"/>
 		<delete dir = "${javadocs}"/>
