--- a/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -1,7 +1,7 @@
-#Tue Aug 08 13:18:40 GMT-08:00 2006
+#Tue Sep 05 15:23:35 PDT 2006
+build.number=332
+build.number.previous=331
 build.version.previous=3.1.1
-build.number.previous=330
-build.number=331
 name=Protege
 copyright=Copyright (c) 1998-2006 Stanford University
 build.status=beta
