fixed the dialog title for the manage included projects dialog.  the title had a '...' at the end, which should only have been in the menu item, not the dialog title.

--- a/src/edu/stanford/smi/protege/resource/files/protege_text.properties
+++ b/src/edu/stanford/smi/protege/resource/files/protege_text.properties
@@ -44,6 +44,7 @@ project.revert=Revert to a Previous Version
 project.revert.mnemonic=R
 project.configure_archive=Configure Archive
 project.manage_included=Manage Included Projects...
+project.manage_included_dialog=Manage Included Projects
 project.change_included=Change Directly Included Projects...
 project.change_included.mnemonic=C
 project.include=Include Project
@@ -179,7 +180,7 @@ facet.create=Create Facet
 facet.delete=Delete Facet
 
 object.view=View Value
-object.view_references=View References to Value  
+object.view_references=View References to Value
 object.create=Create Value
 object.remove=Remove Value
 object.add=Add Value
